# DOF-Retargetting

./: .gitignore  README.md  REQUIREMENTS.md  SETUP.md  pyproject.toml
examples/assets/kuka_iiwa/: iiwa_retarget.urdf
examples/assets/piper/: piper_retarget.urdf
examples/assets/rebot_b601/reBot-DevArm_fixend_description/urdf/: reBot-DevArm_fixend.urdf  reBot-DevArm_fixend_hwlimits.urdf  reBot-DevArm_gripper.urdf
examples/assets/yam/: yam_retarget.urdf
src/robot_trajectory_retargeting/: __init__.py  frames.py  retarget_trajectory.py  urdf_chain.py
tools/: compare_world_trajectories.py  estimate_gripper_tcp_from_urdf.py  inspect_tcp_convention.py  render_arm_with_table_gif.py  render_urdf_trajectory_gif.py  retarget_trajectory.py
validation/: add_grippers.py  grasp_sim.py  make_negative_task.py  make_source_tasks.py  mujoco_validate.py  render_results.py
